src/content/Notifier.module.scss
@import "@radix-ui/themes/styles.css";

.Root {
  z-index: 100000000;
  position: fixed;
  bottom: 0;
  right: 0;

  div {
    opacity: 1;
  }
}

.GlobalInterpolationOptionsContainer {
  position: fixed;
  left: 0;
  bottom: 0;
}

